Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/post-tasks.mdx
+++ b/api-reference/endpoint/post-tasks.mdx
@@ -15,8 +15,8 @@ openapi: 'POST /api/tasks/'
 - `name` (string, required) - Название задачи.
 - `type` (string, optional) - Фильтр по типу задачи.  
   Допустимые значения: `task` (задача), `request` (обращение), `decision` (решение), `meeting` (встреча).
-- `description` (string, optional) - Описание задачи. Это поле не обязательно для заполнения.
-- `to_user_id` (number, required) - Идентификатор пользователя, назначенного исполнителем.
+- `description` (string, optional) - Описание задачи.
+- `performer` (number, required) - Идентификатор пользователя, назначенного исполнителем.
 
 ### Тело запроса
 
@@ -25,9 +25,9 @@ openapi: 'POST /api/tasks/'
 ```json
 {
   "name": "string",
-  "type": "string",
+  "type"?: "string",
   "description"?: "string",
-  "to_user_id": number
+  "performer": number
 }
 ```
 
@@ -37,7 +37,7 @@ openapi: 'POST /api/tasks/'
   "name": "Разработка API",
   "type": "task",
   "description": "Разработать новый API для системы Квант",
-  "to_user_id": 12345
+  "performer": 12345
 }
 ```
 
@@ -54,7 +54,7 @@ Content-Type: application/json
   "type": "task",
   "status": "incoming",
   "description": "Разработать новый API для системы Квант",
-  "to_user_id": 12345,
+  "performer": 12345,
   "created_at": "2023-12-05T12:00:00Z"
 }
 ```
@@ -66,7 +66,7 @@ Content-Type: application/json
 ```json
 {
   "error": "Ошибка в запросе",
-  "message": "Неверные параметры запроса"
+  "message": "Неверные параметры запроса. Пожалуйста, проверьте, что все обязательные поля заполнены корректно и повторите попытку."
 }
 ```
 
@@ -74,21 +74,34 @@ Content-Type: application/json
 ```json
 {
   "error": "Неавторизован",
-  "message": "Необходима аутентификация"
+  "message": "Необходима аутентификация. Убедитесь, что вы предоставили правильный API-ключ в заголовке запроса."
 }
 ```
 - 403 (Forbidden):
 ```json
 {
   "error": "Доступ запрещен",
-  "message": "У вас нет доступа к этой задаче"
+  "message": "У вас нет прав для создания новой задачи. Пожалуйста, обратитесь к администратору системы для получения соответствующих разрешений."
 }
 ```
-
-- Ошибка 429 (Too Many Requests):
+- 404 (Not Found):
+```json
+{
+  "error": "Задача не найдена",
+  "message": "Задача с указанным ID не существует. Убедитесь, что вы используете правильный идентификатор задачи."
+}
+```
+- 429 (Too Many Requests):
 ```json
 {
   "error": "Слишком много запросов",
-  "message": "Превышен лимит запросов"
+  "message": "Превышен лимит запросов. Подождите некоторое время, прежде чем отправлять новый запрос."
+}
+```
+- 500 (Internal Server Error):
+```json
+{
+  "error": "Внутренняя ошибка сервера",
+  "message": "Произошла ошибка на сервере при обработке вашего запроса. Пожалуйста, попробуйте еще раз позже или обратитесь в службу поддержки."
 }
 ```
