--- a/api-reference/endpoint/get-metrics.mdx
+++ b/api-reference/endpoint/get-metrics.mdx
@@ -87,10 +87,17 @@ Content-Type: application/json
   "message": "Информация не найдена"
 }
 ```
-- Ошибка 429 (Too Many Requests):
+- 429 (Too Many Requests):
 ```json
 {
   "error": "Слишком много запросов",
   "message": "Превышен лимит запросов"
+}
+```
+- 500 (Internal Server Error):
+```json
+{
+  "error": "Внутренняя ошибка сервера",
+  "message": "Произошла ошибка на сервере при обработке вашего запроса. Пожалуйста, попробуйте еще раз позже или обратитесь в службу поддержки."
 }
 ```
