Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/get-tasks.mdx
+++ b/api-reference/endpoint/get-tasks.mdx
@@ -98,3 +98,10 @@ GET /api/tasks?type=task&status=incoming&performer=123
   "message": "Превышен лимит запросов. Подождите некоторое время, прежде чем отправлять новый запрос."
 }
 ```
+- 500 (Internal Server Error):
+```json
+{
+  "error": "Внутренняя ошибка сервера",
+  "message": "Произошла ошибка на сервере при обработке вашего запроса. Пожалуйста, попробуйте еще раз позже или обратитесь в службу поддержки."
+}
+```
