--- a/api-reference/endpoint/get-task-detail.mdx
+++ b/api-reference/endpoint/get-task-detail.mdx
@@ -26,12 +26,20 @@ Content-Type: application/json
   "id": 12345,
   "name": "Обновление системы",
   "type": "task",
-  "status": "in_work",
+  "status": "in_progress",
   "description": "Обновление программного обеспечения до последней версии",
-  "to_user_id": 67890,
+  "performer": 67890,
   "created_at": "2023-12-05T10:00:00Z"
 }
 ```
+- `name` (string) - Название задачи.
+- `description` (string) - Описание задачи.
+- `type` (string) - Тип задачи.  
+  Допустимые значения: `task` (задача), `request` (обращение), `decision` (решение), `meeting` (встреча).
+- `status` (string) - Статус задачи.  
+  Допустимые значения: `incoming` (входящие), `accepted` (принятые), `in_progress` (в работе), `completed` (выполненные), `planned` (запланированные), `on_approval` (на утверждении).
+- `performer` (number) - Исполнитель.
+- `created_at` (string) - Дата и время создания задачи в формате ISO 8601.
 
 ### Ошибка
 Если запрос не может быть обработан из-за неверных данных, возвращается ошибка с соответствующим описанием.
@@ -40,7 +48,7 @@ Content-Type: application/json
 ```json
 {
   "error": "Ошибка в запросе",
-  "message": "Неверные параметры запроса"
+  "message": "Неверные параметры запроса. Проверьте правильность всех введенных данных, особенно фильтров."
 }
 ```
 
@@ -48,27 +56,34 @@ Content-Type: application/json
 ```json
 {
   "error": "Неавторизован",
-  "message": "Необходима аутентификация"
+  "message": "Необходима аутентификация. Убедитесь, что вы предоставили правильный API-ключ в заголовке запроса."
 }
 ```
 - 403 (Forbidden):
 ```json
 {
   "error": "Доступ запрещен",
-  "message": "У вас нет доступа к этой задаче"
+  "message": "У вас нет доступа к этой задаче. Проверьте, что у вашего аккаунта есть соответствующие права доступа."
 }
 ```
 - 404 (Not Found):
 ```json
 {
   "error": "Задача не найдена",
-  "message": "Задача с указанным ID не существует"
+  "message": "Задача с указанным ID не существует. Убедитесь, что вы используете правильный идентификатор задачи."
 }
 ```
 - Ошибка 429 (Too Many Requests):
 ```json
 {
   "error": "Слишком много запросов",
-  "message": "Превышен лимит запросов"
+  "message": "Превышен лимит запросов. Подождите некоторое время, прежде чем отправлять новый запрос."
+}
+```
+- 500 (Internal Server Error):
+```json
+{
+  "error": "Внутренняя ошибка сервера",
+  "message": "Произошла ошибка на сервере при обработке вашего запроса. Пожалуйста, попробуйте еще раз позже или обратитесь в службу поддержки."
 }
 ```
