Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/get-task-detail.mdx
+++ b/api-reference/endpoint/get-task-detail.mdx
@@ -48,7 +48,7 @@ Content-Type: application/json
 ```json
 {
   "error": "Ошибка в запросе",
-  "message": "Неверные параметры запроса. Проверьте правильность всех введенных данных, особенно фильтров."
+  "message": "Неверные параметры запроса. Проверьте правильность всех введенных данных."
 }
 ```
 
