Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/delete-task.mdx
+++ b/api-reference/endpoint/delete-task.mdx
@@ -32,7 +32,7 @@ HTTP/1.1 204 No Content
 ```json
 {
   "error": "Ошибка в запросе",
-  "message": "Неверные параметры запроса"
+  "message": "Неверные параметры запроса. Проверьте правильность всех введенных данных."
 }
 ```
 
@@ -40,27 +40,34 @@ HTTP/1.1 204 No Content
 ```json
 {
   "error": "Неавторизован",
-  "message": "Необходима аутентификация"
+  "message": "Необходима аутентификация. Убедитесь, что вы предоставили правильный API-ключ в заголовке запроса."
 }
 ```
 - 403 (Forbidden):
 ```json
 {
   "error": "Доступ запрещен",
-  "message": "У вас нет доступа к этой задаче"
+  "message": "У вас нет доступа к этой задаче. Проверьте, что у вашего аккаунта есть соответствующие права доступа."
 }
 ```
 - 404 (Not Found):
 ```json
 {
   "error": "Задача не найдена",
-  "message": "Задача с указанным ID не существует"
+  "message": "Задача с указанным ID не существует. Убедитесь, что вы используете правильный идентификатор задачи."
 }
 ```
 - Ошибка 429 (Too Many Requests):
 ```json
 {
   "error": "Слишком много запросов",
-  "message": "Превышен лимит запросов"
+  "message": "Превышен лимит запросов. Подождите некоторое время, прежде чем отправлять новый запрос."
+}
+```
+- 500 (Internal Server Error):
+```json
+{
+  "error": "Внутренняя ошибка сервера",
+  "message": "Произошла ошибка на сервере при обработке вашего запроса. Пожалуйста, попробуйте еще раз позже или обратитесь в службу поддержки."
 }
 ```
