--- a/api-reference/endpoint/get-metrics.mdx
+++ b/api-reference/endpoint/get-metrics.mdx
@@ -40,20 +40,27 @@ Content-Type: application/json
       "id": 1,
       "name": "Продажи",
       "value": 100,
-      "date": "2023-01-01",
+      "date": "2024-01-01",
       "function_id": 3
     },
     {
       "id": 2,
       "name": "Клиентская база",
       "value": 200,
-      "date": "2023-01-01",
+      "date": "2024-01-01",
       "function_id": 3
     }
     // ... Другие показатели
   ]
 }
 ```
+### Описание элементов ответа
+
+`metrics` (array) - Массив объектов, каждый из которых представляет показатель.
+`id` (number) - Уникальный идентификатор показателя.
+`name` (string) - Название показателя.
+`value` (number) - Значение показателя.
+`date` (string) - Дата, за которую указан показатель, в формате "yyyy-MM-dd".
 
 ### Ошибка
 Если запрос не может быть обработан из-за неверных данных, возвращается ошибка с соответствующим описанием.
@@ -62,7 +69,7 @@ Content-Type: application/json
 ```json
 {
   "error": "Ошибка в запросе",
-  "message": "Неверные параметры запроса"
+  "message": "Неверные параметры запроса. Проверьте правильность всех введенных данных, особенно фильтров."
 }
 ```
 
@@ -70,28 +77,28 @@ Content-Type: application/json
 ```json
 {
   "error": "Неавторизован",
-  "message": "Необходима аутентификация"
+  "message": "Необходима аутентификация. Убедитесь, что вы предоставили правильный API-ключ в заголовке запроса."
 }
 ```
 - 403 (Forbidden):
 ```json
 {
   "error": "Доступ запрещен",
-  "message": "У вас нет доступа"
+  "message": "У вас нет доступа к показателям. Проверьте, что у вашего аккаунта есть соответствующие права доступа."
 }
 ```
 - 404 (Not Found):
 ```json
 {
-  "error": "Информация не найдена",
-  "message": "Информация не найдена"
+  "error": "Данные не найдены",
+  "message": "Данные для указанных параметров не найдены. Убедитесь, что вы ввели корректные даты или идентификатор функции."
 }
 ```
-- 429 (Too Many Requests):
+- Ошибка 429 (Too Many Requests):
 ```json
 {
   "error": "Слишком много запросов",
-  "message": "Превышен лимит запросов"
+  "message": "Превышен лимит запросов. Подождите некоторое время, прежде чем отправлять новый запрос."
 }
 ```
 - 500 (Internal Server Error):
