Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/get-tasks.mdx
+++ b/api-reference/endpoint/get-tasks.mdx
@@ -59,6 +59,13 @@ GET /api/tasks?type=task&status=incoming&performer=123
 }
 ```
 
+### Описание элементов ответа
+
+- `id` (number) - Уникальный идентификатор задачи.
+- `name` (string) - Название задачи.
+- `description` (string) - Описание задачи.
+- `created_at` (string) - Дата и время создания задачи в формате ISO 8601.
+
 ### Ошибка
 Если запрос не может быть обработан из-за неверных данных, возвращается ошибка с соответствующим описанием.
 
