--- a/api-reference/endpoint/get-task-detail.mdx
+++ b/api-reference/endpoint/get-task-detail.mdx
@@ -32,6 +32,8 @@ Content-Type: application/json
   "created_at": "2023-12-05T10:00:00Z"
 }
 ```
+### Описание элементов ответа
+
 - `name` (string) - Название задачи.
 - `description` (string) - Описание задачи.
 - `type` (string) - Тип задачи.  
