Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/get-metrics.mdx
+++ b/api-reference/endpoint/get-metrics.mdx
@@ -56,11 +56,11 @@ Content-Type: application/json
 ```
 ### Описание элементов ответа
 
-`metrics` (array) - Массив объектов, каждый из которых представляет показатель.
-`id` (number) - Уникальный идентификатор показателя.
-`name` (string) - Название показателя.
-`value` (number) - Значение показателя.
-`date` (string) - Дата, за которую указан показатель, в формате "yyyy-MM-dd".
+- `metrics` (array) - Массив объектов, каждый из которых представляет показатель.
+- `id` (number) - Уникальный идентификатор показателя.
+- `name` (string) - Название показателя.
+- `value` (number) - Значение показателя.
+- `date` (string) - Дата, за которую указан показатель, в формате "yyyy-MM-dd".
 
 ### Ошибка
 Если запрос не может быть обработан из-за неверных данных, возвращается ошибка с соответствующим описанием.
