Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/get-metrics.mdx
+++ b/api-reference/endpoint/get-metrics.mdx
@@ -69,7 +69,7 @@ Content-Type: application/json
 ```json
 {
   "error": "Ошибка в запросе",
-  "message": "Неверные параметры запроса. Проверьте правильность всех введенных данных, особенно фильтров."
+  "message": "Неверные параметры запроса. Проверьте правильность всех введенных данных"
 }
 ```
 
