Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/delete-task.mdx
+++ b/api-reference/endpoint/delete-task.mdx
@@ -18,6 +18,18 @@ openapi: 'DELETE /api/tasks/{id}'
 DELETE /api/tasks/12345
 ```
 
+<CodeGroup>
+
+```md Request
+DELETE /api/tasks/12345
+```
+
+```bash cURL
+curl -X DELETE "https://kvant.app/api/tasks/12345"
+```
+
+</CodeGroup>
+
 ### Успешный ответ
 При успешном удалении задачи сервер вернет HTTP статус 204, не возвращая тело ответа.
 
