Documentation edits made through Mintlify web editor

--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Введение в API Квант'
+title: 'Введение в API Квант 1'
 ---
 Добро пожаловать в документацию по API Квант! Здесь вы найдете информацию обо всех методах API Квант, сможете ознакомиться с инструкциями по их использованию и узнать, какие данные они возвращают.
 
