Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/get-tasks.mdx
+++ b/api-reference/endpoint/get-tasks.mdx
@@ -35,7 +35,7 @@ GET /api/tasks?type=task&status=incoming&performer=123
 ```
 
 ```bash cURL
-curl -X GET "https://kvant.app/api/tasks?status=in_progress&type=task&performer=123"
+curl -X GET "https://api.kvant.app/tasks?status=in_progress&type=task&performer=123"
 ```
 
 </CodeGroup>
