Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/delete-task.mdx
+++ b/api-reference/endpoint/delete-task.mdx
@@ -18,7 +18,7 @@ openapi: 'DELETE /api/tasks/{id}'
 <CodeGroup>
 
 ```md Request
-DELETE /api/tasks/12345
+DELETE /api.kvant.app/tasks/12345
 ```
 
 ```bash cURL
