--- a/api-reference/endpoint/get-task-detail.mdx
+++ b/api-reference/endpoint/get-task-detail.mdx
@@ -18,7 +18,7 @@ GET /api/tasks/12345
 ```
 
 ```bash cURL
-curl -X GET "https://kvant.app/api/tasks/12345"
+curl -X GET "https://api.kvant.app/tasks/12345"
 ```
 
 </CodeGroup>
