--- a/api-reference/endpoint/post-metrics.mdx
+++ b/api-reference/endpoint/post-metrics.mdx
@@ -39,7 +39,7 @@ interface Request {
 ```
 
 ```bash cURL
-curl -X POST "https://kvant.app/api/metrics/123" \
+curl -X POST "https://api.kvant.app/metrics/123" \
      -H "Content-Type: application/json" \
      -d '{
           "metric_id": 1,
