--- a/api-reference/endpoint/post-tasks.mdx
+++ b/api-reference/endpoint/post-tasks.mdx
@@ -41,7 +41,7 @@ interface Request {
 ```
 
 ```bash cURL
-curl -X POST "https://kvant.app/api/tasks" \
+curl -X POST "https://api.kvant.app/tasks" \
      -H "Content-Type: application/json" \
      -d '{
            "name": "Разработка API",
