--- a/api-reference/endpoint/get-metrics.mdx
+++ b/api-reference/endpoint/get-metrics.mdx
@@ -32,7 +32,7 @@ GET /api/metrics?start_date=2023-01-01&end_date=2023-01-31&function_id=3
 ```
 
 ```bash cURL
-curl -X GET "https://kvant.app/api/metrics?start_date=2023-01-01&end_date=2023-01-31&function_id=3"
+curl -X GET "https://api.kvant.app/metrics?start_date=2023-01-01&end_date=2023-01-31&function_id=3"
 ```
 
 </CodeGroup>
