--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -11,10 +11,14 @@ REST API Квант разработан так, чтобы его было пр
 
 ## Аутентификация
 
-API Квант использует API-ключи для проверки и авторизации запросов. Вы можете управлять и просматривать свои API-ключи через панель управления Квант, или запросить ключ через поддержку. Вам нужно передать свой API-ключ в заголовке `Authorization` с префиксом `Bearer` при отправке запроса.
+API Квант использует API-ключи для проверки и авторизации запросов. Вы можете управлять и просматривать свои API-ключи через панель управления Квант или запросить ключ через поддержку. 
+
+Для отправки запросов к API Квант, используйте базовый URL: `https://kvant.app/api/`. Все запросы должны быть отправлены на этот адрес с соответствующими путями и параметрами.
+
+При отправке запроса, необходимо передать ваш API-ключ в заголовке `Authorization` с префиксом `Bearer`:
 
 ```json
-Bearer ВАШ_API_КЛЮЧ
+Authorization: Bearer ВАШ_API_КЛЮЧ
 ```
 API-ключи - это ключи к вашему аккаунту, поэтому их нужно хранить в тайне и безопасности. Не делитесь ими на GitHub или где-либо в интернете, где кто-то мог бы их увидеть.
 
