Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/delete-task.mdx
+++ b/api-reference/endpoint/delete-task.mdx
@@ -1,9 +1,9 @@
 ---
 title: 'Удаление коммуникации'
-openapi: 'DELETE /api/tasks/{id}'
+openapi: 'DELETE /api.kvant.app/tasks/{id}'
 ---
 
-Метод `DELETE /api/tasks/{id}` позволяет удалить существующую задачу в системе Квант. Необходимо передать в строке запроса идентификатор задачи, которую вы хотите удалить.
+Метод `DELETE /api.kvant.app/tasks/{id}` позволяет удалить существующую задачу в системе Квант. Необходимо передать в строке запроса идентификатор задачи, которую вы хотите удалить.
 
 Удаление задачи является необратимой операцией, поэтому используйте этот метод с осторожностью.
 
