--- a/api-reference/endpoint/get-tasks.mdx
+++ b/api-reference/endpoint/get-tasks.mdx
@@ -1,8 +1,8 @@
 ---
 title: 'Список коммуникаций'
-openapi: 'GET /api/tasks/'
+openapi: 'GET /api.kvant.app/tasks/'
 ---
-Метод `GET /api/tasks` предоставляет доступ к списку коммуникаций в системе Квант. Этот метод позволяет извлекать данные о всех созданных задачах, с возможностью фильтрации.
+Метод `GET /api.kvant.app/tasks` предоставляет доступ к списку коммуникаций в системе Квант. Этот метод позволяет извлекать данные о всех созданных задачах, с возможностью фильтрации.
 
 Вы можете фильтровать коммуникации по различным параметрам, включая тип задачи, статус (например, "входящие", "принятые", "в работе", "выполненные", "запланированные", "на утверждении") и назначенному исполнителю.
 
@@ -18,7 +18,7 @@ openapi: 'GET /api/tasks/'
 - `total_count` (number) - Общее количество задач в списке, возвращаемое запросом.
 
 ```typescript
-// GET /api/tasks
+// GET /api.kvant.app/tasks
 interface Request { 
   type?: "task" | "request" | "decision" | "meeting"
   status?: "incoming" | "accepted" | "in_progress" | "completed" | "planned" | "on_approval"
