--- a/api-reference/endpoint/get-metrics.mdx
+++ b/api-reference/endpoint/get-metrics.mdx
@@ -1,8 +1,8 @@
 ---
 title: 'Список показателей'
-openapi: 'GET /api/metrics/'
+openapi: 'GET /api.kvant.app/metrics/'
 ---
-Метод `GET /api/metrics` используется для получения списка всех показателей в системе Квант за указанный промежуток времени.
+Метод `GET /api.kvant.app/metrics` используется для получения списка всех показателей в системе Квант за указанный промежуток времени.
 
 ### Параметры запроса
 
@@ -15,7 +15,7 @@ openapi: 'GET /api/metrics/'
 
 
 ```typescript
-// GET /api/metrics
+// GET /api.kvant.app/metrics
 interface Request { 
   start_date?: "yyyy-MM-dd"
   end_date?: "yyyy-MM-dd"
