Documentation edits made through Mintlify web editor

--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -7,7 +7,7 @@ API Квант разработан с учетом архитектурного
 
 ## Использование API
 
-REST API Квант разработан так, чтобы его было просто использовать. Чтобы лучше ознакомиться с API, вы также можете использовать инструменты вроде [Postman](https://www.postman.com/) или [Insomnia](https://mintlify.com/docs/api-playground/mdx/configuration).
+REST API Квант разработан так, чтобы его было просто использовать. Чтобы лучше ознакомиться с API, вы также можете использовать инструменты вроде [Postman](https://www.postman.com/) или [Insomnia](https://insomnia.rest/).
 
 ## Аутентификация
 
