Documentation edits made through Mintlify web editor

--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -13,7 +13,7 @@ REST API Квант разработан так, чтобы его было пр
 
 API Квант использует API-ключи для проверки и авторизации запросов. Вы можете управлять и просматривать свои API-ключи через панель управления Квант или запросить ключ через поддержку. 
 
-Для отправки запросов к API Квант, используйте базовый URL: `https://kvant.app/api/`. Все запросы должны быть отправлены на этот адрес с соответствующими путями и параметрами.
+Для отправки запросов к API Квант, используйте базовый URL: `https://api.kvant.app/`. Все запросы должны быть отправлены на этот адрес с соответствующими путями и параметрами.
 
 При отправке запроса, необходимо передать ваш API-ключ в заголовке `Authorization` с префиксом `Bearer`:
 
