--- a/api-reference/endpoint/get-task-detail.mdx
+++ b/api-reference/endpoint/get-task-detail.mdx
@@ -1,8 +1,8 @@
 ---
 title: 'Информация о коммуникации'
-openapi: 'GET /api.kvant.app/tasks/{id}'
+openapi: 'GET /tasks/{id}'
 ---
-Метод `GET /api.kvant.app/tasks/{id}` позволяет получить детальную информацию о конкретной коммуникации по её идентификатору. Этот метод полезен, когда вам нужны подробные данные об одной задаче, включая ее статус, тип, описание и другую информацию.
+Метод `GET /tasks/{id}` позволяет получить детальную информацию о конкретной коммуникации по её идентификатору. Этот метод полезен, когда вам нужны подробные данные об одной задаче, включая ее статус, тип, описание и другую информацию.
 
 ### Параметры запроса
 
@@ -14,7 +14,7 @@ openapi: 'GET /api.kvant.app/tasks/{id}'
 <CodeGroup>
 
 ```md Request
-GET /api.kvant.app/tasks/12345
+GET /tasks/12345
 ```
 
 ```bash cURL
