--- a/api-reference/endpoint/post-metrics.mdx
+++ b/api-reference/endpoint/post-metrics.mdx
@@ -1,8 +1,8 @@
 ---
 title: 'Обновление данных показателя'
-openapi: 'POST /api.kvant.app/metrics/{id}'
+openapi: 'POST /metrics/{id}'
 ---
-Метод `POST /api.kvant.app/metrics/{id}` позволяет обновить данные конкретного показателя в системе Квант. Для выполнения этого запроса необходимо указать идентификатор показателя в URL запроса и предоставить обновленные данные в теле запроса.
+Метод `POST /metrics/{id}` позволяет обновить данные конкретного показателя в системе Квант. Для выполнения этого запроса необходимо указать идентификатор показателя в URL запроса и предоставить обновленные данные в теле запроса.
 
 ### Параметры запроса
 
@@ -16,7 +16,7 @@ openapi: 'POST /api.kvant.app/metrics/{id}'
 - `date` (date, required) - Дата, за которую вносится обновление значения.
 
 ```typescript
-// POST /api.kvant.app/metrics/{id}
+// POST /metrics/{id}
 interface Request { 
   metric_id: number,
   name?: string,
