--- a/api-reference/endpoint/post-tasks.mdx
+++ b/api-reference/endpoint/post-tasks.mdx
@@ -1,9 +1,9 @@
 ---
 title: 'Создание коммуникации'
-openapi: 'POST /api/tasks/'
+openapi: 'POST /tasks/'
 ---
 
-Метод `POST /api/tasks` позволяет создать новую задачу в системе Квант. Необходимо передать в теле запроса данные задачи.
+Метод `POST /tasks` позволяет создать новую задачу в системе Квант. Необходимо передать в теле запроса данные задачи.
 Вы должны указать название задачи и исполнителя, но вы также можете определить тип задачи и описание.
 
 Если вы не зададите тип коммуникации при создании, будет использован тип по умолчанию. Эти параметры включают "задачу", "обращение", "принятое решение".
@@ -19,7 +19,7 @@ openapi: 'POST /api/tasks/'
 - `performer` (number, required) - Идентификатор пользователя, назначенного исполнителем.
 
 ```typescript
-// POST /api.kvant.app/tasks
+// POST /tasks
 interface Request { 
   name: "string",
   type?: "string",
