--- a/api-reference/endpoint/get-metrics.mdx
+++ b/api-reference/endpoint/get-metrics.mdx
@@ -1,8 +1,8 @@
 ---
 title: 'Список показателей'
-openapi: 'GET /api.kvant.app/metrics/'
+openapi: 'GET /metrics/'
 ---
-Метод `GET /api.kvant.app/metrics` используется для получения списка всех показателей в системе Квант за указанный промежуток времени.
+Метод `GET /metrics` используется для получения списка всех показателей в системе Квант за указанный промежуток времени.
 
 ### Параметры запроса
 
@@ -15,7 +15,7 @@ openapi: 'GET /api.kvant.app/metrics/'
 
 
 ```typescript
-// GET /api.kvant.app/metrics
+// GET /metrics
 interface Request { 
   start_date?: "yyyy-MM-dd"
   end_date?: "yyyy-MM-dd"
@@ -28,7 +28,7 @@ interface Request {
 <CodeGroup>
 
 ```md Request
-GET /api/metrics?start_date=2023-01-01&end_date=2023-01-31&function_id=3
+GET /metrics?start_date=2023-01-01&end_date=2023-01-31&function_id=3
 ```
 
 ```bash cURL
