Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/get-metrics.mdx
+++ b/api-reference/endpoint/get-metrics.mdx
@@ -2,13 +2,13 @@
 title: 'Список показателей'
 openapi: 'GET /metrics/'
 ---
-Метод `GET /metrics` используется для получения списка всех показателей в системе Квант за указанный промежуток времени.
+Метод `GET /metrics` используется для получения списка проектов в системе Квант.
 
 ### Параметры запроса
 
-Этот метод поддерживает следующие параметры запроса для фильтрации списка коммуникаций:
+Этот метод поддерживает следующие параметры запроса для фильтрации списка проектов:
 
-- `start_date` (date, optional) - Начальная дата промежутка.
+- `start_date` (date, optional) - Начальная дата создания проекта.
 - `end_date` (date, optional) - Конечная дата промежутка.
 - `function_id` (number, optional) - Идентификатор функции пользователя для фильтрации показателей.
 - `total_count` (number, required) - Общее количество показателей в списке, возвращаемое запросом.
