Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/get-projects.mdx
+++ b/api-reference/endpoint/get-projects.mdx
@@ -47,8 +47,8 @@ Content-Type: application/json
   "projects": [
     {
       "id": 1,
-      "name": "проект1",
-      "description": "Описание проекта 1",
+      "name": "Проект №1",
+      "description": "Описание проекта №1",
       "creator_id": 3,
       "created_at": "2022-03-25 08:54:37",
       "tasksCount": 1,
@@ -62,21 +62,15 @@ Content-Type: application/json
 ```
 ### Описание элементов ответа
 
-- `metrics` (array) - Массив объектов, каждый из которых представляет показатель.
-- `id` (number) - Уникальный идентификатор показателя.
-- `name` (string) - Название показателя.
-- `value` (number) - Значение показателя.
-- `date` (string) - Дата, за которую указан показатель, в формате "yyyy-MM-dd".
-
-- projects (array) - Массив объектов, каждый из которых представляет проект.
-- id (number) - Уникальный идентификатор проекта.
-- name (string) - Название проекта.
-- description (string) - Описание проекта.
-- creator_id (number) - Идентификатор пользователя, создавшего проект.
-- created_at (string) - Дата и время создания проекта в формате "yyyy-MM-dd".
-- tasksCount (number) - Количество задач в проекте.
-- progress (number) - Прогресс выполнения проекта.
-- completed (number) - Статус завершения проекта.
+- `projects` (array) - Массив объектов, каждый из которых представляет проект.
+- `id` (number) - Уникальный идентификатор проекта.
+- `name` (string) - Название проекта.
+- `description` (string) - Описание проекта.
+- `creator_id` (number) - Идентификатор пользователя, создавшего проект.
+- `created_at` (string) - Дата и время создания проекта в формате "yyyy-MM-dd".
+- `tasksCount` (number) - Количество задач в проекте.
+- `progress` (number) - Прогресс выполнения проекта.
+- `completed` (number) - Статус завершения проекта.
 
 ### Ошибка
 Если запрос не может быть обработан из-за неверных данных, возвращается ошибка с соответствующим описанием.
