Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/get-metrics.mdx
+++ b/api-reference/endpoint/get-metrics.mdx
@@ -8,8 +8,8 @@ openapi: 'GET /metrics/'
 
 Этот метод поддерживает следующие параметры запроса для фильтрации списка проектов:
 
-- `start_date` (date, optional) - Начальная дата создания проекта.
-- `end_date` (date, optional) - Конечная дата промежутка.
+- `start_date` (date, optional) - Начальная дата.
+- `end_date` (date, optional) - Конечная дата.
 - `function_id` (number, optional) - Идентификатор функции пользователя для фильтрации показателей.
 - `total_count` (number, required) - Общее количество показателей в списке, возвращаемое запросом.
 
