--- a/api-reference/endpoint/get-projects.mdx
+++ b/api-reference/endpoint/get-projects.mdx
@@ -49,11 +49,10 @@ Content-Type: application/json
       "id": 1,
       "name": "Проект №1",
       "description": "Описание проекта №1",
-      "creator_id": 3,
+      "owner_id": 3,
       "created_at": "2024-03-25 08:54:37",
       "tasksCount": 1,
-      "progress": 0,
-      "completed": 0
+      "progress": 0 // "on progress" | "completed"
       // ... Другие данные проекта
     },
     // ... Другие проекты
@@ -66,11 +65,11 @@ Content-Type: application/json
 - `id` (number) - Уникальный идентификатор проекта.
 - `name` (string) - Название проекта.
 - `description` (string) - Описание проекта.
-- `creator_id` (number) - Идентификатор пользователя, создавшего проект.
+- `owner_id` (number) - Идентификатор пользователя, ответственного за проект.
 - `created_at` (string) - Дата и время создания проекта в формате "yyyy-MM-dd".
 - `tasksCount` (number) - Количество задач в проекте.
-- `progress` (number) - Прогресс выполнения проекта.
-- `completed` (number) - Статус завершения проекта.
+- `progress` (number) - Прогресс выполнения проекта. 
+
 
 ### Ошибка
 Если запрос не может быть обработан из-за неверных данных, возвращается ошибка с соответствующим описанием.
