Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/post-project.mdx
+++ b/api-reference/endpoint/post-project.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Обновление данных проекта'
-openapi: 'DELETE /project/{id}'
+openapi: 'POST /project/{id}'
 ---
 
 Метод `POST /project/{id}` позволяет удалить существующий проект в системе Квант. Необходимо передать в строке запроса идентификатор проекта, который вы хотите удалить.
