Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/get-projects.mdx
+++ b/api-reference/endpoint/get-projects.mdx
@@ -93,14 +93,14 @@ Content-Type: application/json
 ```json
 {
   "error": "Доступ запрещен",
-  "message": "У вас нет доступа к проектам. Проверьте, что у вашего аккаунта есть соответствующие права доступа."
+  "message": "У вас нет доступа к данным проектам. Проверьте, что у вашего аккаунта есть соответствующие права доступа."
 }
 ```
 - 404 (Not Found):
 ```json
 {
   "error": "Данные не найдены",
-  "message": "Данные для указанных параметров не найдены. Убедитесь, что вы ввели корректные даты или идентификатор функции."
+  "message": "Данные для указанных параметров не найдены. Убедитесь, что вы ввели корректные даты или другие данные."
 }
 ```
 - Ошибка 429 (Too Many Requests):
