Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/post-project.mdx
+++ b/api-reference/endpoint/post-project.mdx
@@ -3,15 +3,17 @@ title: 'Обновление данных проекта'
 openapi: 'POST /project/{id}'
 ---
 
-Метод `POST /project/{id}` позволяет удалить существующий проект в системе Квант. Необходимо передать в строке запроса идентификатор проекта, который вы хотите удалить.
-
-Удаление проекта является необратимой операцией, поэтому используйте этот метод с осторожностью.
+Метод POST /project/{id} позволяет обновить данные конкретного проекта в системе Квант. Для выполнения этого запроса необходимо указать идентификатор проекта в URL запроса и предоставить обновленные данные в теле запроса.
 
 ### Параметры запроса
 
-Для получения информации о проекте, необходимо указать идентификатор задачи в пути запроса:
+Для обновления информации о проекте, необходимо указать следующие параметры:
 
-- `id` (number, required) - уникальный идентификатор проекта.
+- `id` (number, required) - Уникальный идентификатор проекта.
+- `name` (string, optional) - Новое название проекта.
+- `description` (string, optional) - Новое описание проекта.
+- `due_at` (string, optional) - Крайний срок в формате "yyyy-MM-dd HH:mm:ss".
+- `visibility` (string, required) - Статус видимости проекта ('public', 'link', 'private').
 
 ### Пример запроса
 
