--- a/api-reference/endpoint/post-projects.mdx
+++ b/api-reference/endpoint/post-projects.mdx
@@ -3,7 +3,7 @@ title: 'Обновление данных проекта'
 openapi: 'POST /projects/{id}'
 ---
 
-Метод POST /project/{id} позволяет обновить данные конкретного проекта в системе Квант. Для выполнения этого запроса необходимо указать идентификатор проекта в URL запроса и предоставить обновленные данные в теле запроса.
+Метод POST /projects/{id} позволяет обновить данные конкретного проекта в системе Квант. Для выполнения этого запроса необходимо указать идентификатор проекта в URL запроса и предоставить обновленные данные в теле запроса.
 
 ### Параметры запроса
 
